--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="twitter:description" content="Architecture, Design, XR">
 <meta name="twitter:image" content="https://khech.com/images/preview/vr_logo.jpg">
 	
-<title>Khech. Architecture, Design, VR</title>
+<title>Khech. Architecture, Design, VR Test </title>
 <style type="text/css"></style>
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&amp;subset=cyrillic&amp" rel="stylesheet">
 <link href="styles/common.css" rel="stylesheet" type="text/css">
@@ -39,8 +39,6 @@
 		
 		<a href="https://socprofile.com/khech" target="_blank" rel="noopener"><img src="images/markup/link.png" style="opacity: 1; margin-left: 30px " alt="social links" width="32" height="32" align="middle"/></a>
 		
-		
-	jp;
 		
 	<!--
 		<a href="https://t.me/Khech" target="_blank" rel="noopener"><img loading="lazy" src="images/markup/telegram.png" style="opacity: 0.55;" alt="" width="32" height="32" align="middle"/></a>
