--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="twitter:description" content="Architecture, Design, XR">
 <meta name="twitter:image" content="https://khech.com/images/preview/vr_logo.jpg">
 	
-<title>Khech. Architecture, Design, VR Test </title>
+<title>Khech. Architecture, Design, VR</title>
 <style type="text/css"></style>
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&amp;subset=cyrillic&amp" rel="stylesheet">
 <link href="styles/common.css" rel="stylesheet" type="text/css">
@@ -30,7 +30,7 @@
 	
 <div class="title">
 <h1>Arseniy Khechinashvili</h1>
-<h2>Architecture, Design, XR</h2>
+<h2>Architecture, Design test</h2>
 </div>
 	
 	<div class="social">
