--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 	
 <div class="title">
-<h1>Arseniy Khechinashvili 11 111</h1>
-<h2>Architecture, Design test</h2>
+<h1>Arseniy Khechinashvili</h1>
+<h2>Architecture, Design</h2>
 </div>
 	
 	<div class="social">
@@ -75,11 +75,6 @@
     <img loading="lazy" src="images/preview/metro.gif" class="tiles"/ alt="Kuntsevskaya metro station">
 	</a>
 </div>
-	
-	hgh
-	fgh
-	
-	
 	
 	<div id="titles">
 	<a href="millennium.html">
