--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	
 <div class="title">
 <h1>Arseniy Khechinashvili</h1>
-<h2>Architecture, Design TEST</h2>
+<h2>Architecture, Design</h2>
 </div>
 	
 	<div class="social">
