--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div id="project_hat">
 <div class="title">
 <h1>Arseniy Khechinashvili</h1>
-<h2>Architecture, Design</h2>
+<h2>Architecture, Design v1</h2>
 </div>
 	<div class="social">
 		
