--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	
 <div class="title">
 <h1>Arseniy Khechinashvili</h1>
-<h2>Architecture, Design</h2>
+<h2>Architecture, Design VS</h2>
 </div>
 	
 	<div class="social">
