--- a/index.html
+++ b/index.html
@@ -24,24 +24,26 @@
 
 <body>
 
-<div id="project_hat">
+<div id="project_hat" class="index-hat">
 
 	
-<div class="title">
-<h1>Arseniy Khechinashvili</h1>
-<h2>Architecture, Design VS</h2>
+<div class="title index-title">
+<h1>Arseniy Khech.</h1>
+<h2>Architecture, Design, Visual Art</h2>
 </div>
 	
 	<div class="social">
 		
-		<a href="https://khech.com/Khech_Portfolio_2024_Eng.pdf" target="_blank" rel="noopener"><img src="images/markup/pdf.png" style="opacity: 1;" alt="download portfolio" width="28" height="28" align="middle"/></a>
 		
-		<a href="https://socprofile.com/khech" target="_blank" rel="noopener"><img src="images/markup/link.png" style="opacity: 1; margin-left: 30px " alt="social links" width="32" height="32" align="middle"/></a>
+		<a href="https://socprofile.com/khech" target="_blank" rel="noopener">
+  <div class="contacts-link">Contacts</div>
+    </a>
 		
  	</div>
 	
 	 	</div>
 
+ <h3 class="projects-heading">Selected Projects</h3>
 
  <div class="gallery">
 
