--- a/pizza_school.html
+++ b/pizza_school.html
@@ -58,7 +58,7 @@
     <img src="images/markup/arrow_R.png" alt="" width="32" height="32" align="middle"/>
     </div></a>
     
-    <a href="/"><div class="cross_blank">
+    <a href="archive.html"><div class="cross_blank">
     <img src="images/markup/cross.png" alt="" width="32" height="32"  align="middle"/>
     </div></a>
     
