--- a/neglinka.html
+++ b/neglinka.html
@@ -60,7 +60,7 @@ body,td,th {
     <img src="images/markup/arrow_R.png" alt="" width="32" height="32" align="middle"/>
     </div></a>
     
-    <a href="/"><div class="cross_blank">
+    <a href="archive.html"><div class="cross_blank">
     <img src="images/markup/cross.png" alt="" width="32" height="32"  align="middle"/>
     </div></a>
     
