--- a/index.html
+++ b/index.html
@@ -112,9 +112,16 @@
     </div>
 		 </div>
 
-		 
-    <!-- Ряд 4: Sophia / Renovation -->
     <div class="titles">
+      <a href="bath.html">
+        <div class="name_block">Bath</div>
+        <img loading="lazy" src="images/preview/bath.jpg" class="tiles" alt="Bath"/>
+      </a>
+    </div>
+
+		 
+
+    <div class="titles col2">
       <a href="sophia.html">
         <div class="name_block">
           <span style="color: #f5002d">Sophia</span>
@@ -123,7 +130,7 @@
       </a>
     </div>
 
-    <div class="titles col2">
+    <div class="titles">
       <a href="renovation.html">
         <div class="name_block">The renovation</div>
         <img loading="lazy" src="images/preview/renovation.jpg" class="tiles" alt="The renovation"/>
@@ -131,7 +138,7 @@
     </div>
 
    
-	 <div class="titles">
+	 <div class="titles col2">
 		 
 	 <div class="titles_sq">
       <a href="neon_suit.html">
@@ -148,7 +155,7 @@
     </div>
 	</div>
 
-    <div class="titles col2">
+    <div class="titles">
       <a href="protvino.html">
         <div class="name_block">Protvino</div>
         <img loading="lazy" src="images/preview/protvino.jpg" class="tiles" alt="Protvino"/>
@@ -156,7 +163,7 @@
     </div>
 
     <!-- Ряд 6: DK / Lotoshino -->
-    <div class="titles">
+    <div class="titles col2">
       <a href="dk_mo.html">
         <div class="name_block">
           <span style="color: #ffd700">Houses of culture</span>
@@ -165,9 +172,7 @@
       </a>
     </div>
 
-
-
-    <div class="titles col2">
+    <div class="titles">
       <a href="stpf.html">
         <div class="name_block">
           <span style="color: #A5D610">Cannabis bank</span>
@@ -176,7 +181,9 @@
       </a>
     </div>
 
-	 <div class="titles">
+
+
+    <div class="titles col2">
     <div class="titles_sq">
       <a href="archmsc18.html">
         <div class="name_block">ArchMsc</div>
@@ -192,15 +199,14 @@
     </div>
 		 </div>
 
-    <div class="titles col2">
+    <div class="titles">
       <a href="valdai.html">
         <div class="name_block">Valdai Museum</div>
         <img loading="lazy" src="images/preview/valdai.jpg" class="tiles" alt="Valdai Museum"/>
       </a>
     </div>
 
- 
-    <div class="titles">
+    <div class="titles col2">
       <a href="salut.html">
         <div class="name_block">Sokolinaya Gora</div>
         <img loading="lazy" src="images/preview/salut.jpg" class="tiles" alt="Sokolinaya Gora"/>
@@ -208,7 +214,7 @@
     </div>
 
 
-    <div class="titles col2">
+    <div class="titles">
       <a href="porto.html">
         <div class="name_block">Porto</div>
         <img loading="lazy" src="images/preview/porto.jpg" class="tiles" alt="Porto"/>
