Index Tiles pics, Placement, Info Delete, Metrika delete, unusable Java delete

--- a/archive.html
+++ b/archive.html
@@ -56,6 +56,10 @@
 
 <h3><a href="propaganda.html">Propaganda</a></h3>
 
+<h3><a href="devarh.html">Деварх</a></h3>
+
+<h3><a href="concursus.html">Concursus</a></h3>
+
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
