--- a/devarh.html
+++ b/devarh.html
@@ -24,27 +24,8 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&amp;subset=cyrillic" rel="stylesheet">
 <link href="styles/common.css" rel="stylesheet" type="text/css">
 	
-	<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(51445594, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/51445594" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
-	
-	
 </head>
-
   
-
-
 <body bgcolor="#000000">
     
 
@@ -55,7 +36,7 @@
 <h2><font style="color: #ffffff">Паблик VK</font></h2>
 </div>
 
-    <a href="/"><div class="cross_blank_w">
+    <a href="archive.html"><div class="cross_blank_w">
     <img src="images/markup/cross_white.png" alt="" width="32" height="32"  align="middle"/>
     </div></a>
 </div>
@@ -71,22 +52,13 @@
 </div>
 
 <img style="margin-left:150px; margin-top:100px" src="images/content/devarh/13.gif" width="960" alt=""/>
-		
 <img style="margin-left:150px; margin-top:100px;" src="images/content/devarh/1.jpg" width="960" height="720" alt=""/>
-
 <img style="margin-left:150px; margin-top:100px" src="images/content/devarh/2.jpg" width="960" height="720" alt=""/>
-
 <img style="margin-left:150px; margin-top:100px" src="images/content/devarh/3.jpg" width="960" height="720" alt=""/>
-
-
 <img style="margin-left:150px; margin-top:100px" src="images/content/devarh/4.jpg" width="960" height="720" alt=""/>
-
 <img style="margin-left:150px; margin-top:100px" src="images/content/devarh/5.jpg" width="960" height="720" alt=""/>
-
 <img style="margin-left:150px; margin-top:100px" src="images/content/devarh/6.jpg" width="960" height="720" alt=""/>
-
 <img style="margin-left:150px; margin-top:100px;" src="images/content/devarh/7.jpg" width="959" height="720" alt=""/>
-	
 <img style="margin-left:150px; margin-top:100px;" src="images/content/devarh/12.jpg" width="960" height="720" alt=""/>
 	
 
