--- a/sophia.html
+++ b/sophia.html
@@ -25,24 +25,7 @@ body,td,th {
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&amp;subset=cyrillic" rel="stylesheet">
 <link href="styles/common.css" rel="stylesheet" type="text/css">
 	
-		<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(51445594, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/51445594" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
-	
 </head>
-
-
 
 <body>
     
@@ -68,60 +51,17 @@ body,td,th {
     
 </div>
 
-
-<div id="info">
- <img style="margin-left:28px;" src="images/markup/info.png" width="32" height="32" alt=""/>
-</div>
-
-<div id="ano">
-<div class="ano_blank">
-	
+<!--
 <p>The competition aimed at creating an urban planning concept to develop an area around St. Nedelya Church. The goal of my team was to design a multifunctional, comfortable environment, and emphasise the sight's identity.</p>
 <p>Under the St. Nedelya square, there are ruins of the ancient town of Serdica. Given today's urban planning situation, there was no opportunity for archaeological excavations to happen and let the general public explore the ruins.</p>
-
-
-</div>
-	
-<div class="ano_blank">
-	
 <p>After some research, I suggested we base our project on virtual reality. I developed a concept of using augmented reality on smartphones, which would be available for all visitors as well as make it possible to scan the environment and discover the layered cultural heritage. I also included in the project a virtual reality pavilion, which was supposed to become a platform for training courses devoted to the history of Bulgaria and be open to everyone interested.</p>
 <p>The project won second place among participants from all over the world. The Jury appreciated our decision to connect physical and augmented reality.</p>
 
-</div>
-	
-</div>
-
-
-<div id="ano">
-<div class="ano_blank">
-<p>Международный португальский конкурс на реконструкцию
-заброшенной фабрики в городе Порто. Согласно заданию на
-территории должна расположиться автозаправочная станция
- с общественными функциями и оранжереей.</p>
-
-<p>Руины фабрики согласно заданию можно было сносить, но это
-полностью противоречит моему подходу к наследию. Проект
-подразумевает реконструкцию руин и возведение новых
-компактных павильонов, подчеркивающих масштаб застройки.</p>
-
-<p>Для максимального сохранения свободной площади на замену
-классической автомобильной парковки была выбрана современная
-автоматизированная система. Таким образом удалось сохранить треть пространства.<p>
-</div>
-<div class="ano_blank">
-</p>На освободившемся пространстве располагается
-открытая площадь вдоль которой по рельсам передвигается большой
-портовый мост. Функцией моста является передвижение портовых
-контейнеров и составление из них различных конфигураций.</p>
-
-<p>Порто - портовый город, это исходит даже из названия.
-Использование контейнеров и грузового крана призвано
-подчеркнуть характер города.</p>
-
-<p>feat. <a target="_blank" href="http://stenarch.ru">Андрей Стенюшкин</a></p>
-</div>
-</div>
-
+<p>The competition aimed at creating an urban planning concept to develop an area around St. Nedelya Church. The goal of my team was to design a multifunctional, comfortable environment, and emphasise the sight's identity.</p>
+<p>Under the St. Nedelya square, there are ruins of the ancient town of Serdica. Given today's urban planning situation, there was no opportunity for archaeological excavations to happen and let the general public explore the ruins.</p>
+<p>After some research, I suggested we base our project on virtual reality. I developed a concept of using augmented reality on smartphones, which would be available for all visitors as well as make it possible to scan the environment and discover the layered cultural heritage. I also included in the project a virtual reality pavilion, which was supposed to become a platform for training courses devoted to the history of Bulgaria and be open to everyone interested.</p>
+<p>The project won second place among participants from all over the world. The Jury appreciated our decision to connect physical and augmented reality.</p>
+-->
 
 
 
@@ -153,17 +93,6 @@ body,td,th {
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-<script type="text/javascript">
-
-var block = $('#ano'); 
-var infoButton = $('#info');
-
-
-infoButton.click(function(){
-	block.toggle();
-});
-
-</script>
 
 <script type="text/javascript">
 $(function() {
@@ -172,8 +101,6 @@ $(function() {
    });
 });
 </script>
-
-
 
 
 </body>
