--- a/neon_suit.html
+++ b/neon_suit.html
@@ -28,9 +28,7 @@ body,td,th { background-color: black
 </head>
 
 
-
-<body
-    
+<body>    
 
 <div id="project_hat">
 
@@ -53,7 +51,6 @@ body,td,th { background-color: black
     
 </div>
 
-
 <img class="img" src="images/content/neon_suit/0.jpg" width="1200" alt=""/>
 
 
@@ -74,7 +71,6 @@ body,td,th { background-color: black
 <img class="img" src="images/content/neon_suit/77.jpg" width="570" alt=""/>
 <img class="img" src="images/content/neon_suit/88.jpg" width="570" alt=""/>
 </div>
-
 
 
 
