--- a/index.html
+++ b/index.html
@@ -48,10 +48,28 @@
  <div class="gallery">
 
   
+  <div class="titles">
+      <a href="office_building.html">
+        <div class="name_block">
+          <span style="color: #ff8800">Office Building</span>
+        </div>
+        <img loading="lazy" src="images/preview/office_building.jpg" class="tiles" alt="Office Building"/>
+      </a>
+    </div>
+
+ <div class="titles col2">
+      <a href="business_centre.html">
+        <div class="name_block">
+          <span style="color: #db1731">Business Centre</span>
+        </div>
+        <img loading="lazy" src="images/preview/business_centre.jpg" class="tiles" alt="Business Centre"/>
+      </a>
+    </div>
+
     <div class="titles">
       <a href="TbilisiHills.html">
         <div class="name_block">
-          <span style="color: #f07d7c">Tbilisi Hills Complex</span>
+          <span style="color: #ff7370">Tbilisi Hills Complex</span>
         </div>
         <img loading="lazy" src="images/preview/tbilisihills.jpg" class="tiles" alt="Tbilisi Hills Complex"/>
       </a>
@@ -60,7 +78,7 @@
  <div class="titles col2">
       <a href="millennium.html">
         <div class="name_block">
-          <span style="color: #ffd700">Millennium</span>
+          <span style="color: #ff8800">Millennium</span>
         </div>
         <img loading="lazy" src="images/preview/prive_house.jpg" class="tiles" alt="Millennium"/>
       </a>
@@ -71,7 +89,7 @@
     <div class="titles">
       <a href="Kuntsevskaya.html">
         <div class="name_block">
-          <span style="color: #9c9c9c">Kuntsevskaya metro station</span>
+          <span style="color: #666666">Kuntsevskaya metro station</span>
         </div>
         <img loading="lazy" src="images/preview/metro.gif" class="tiles" alt="Kuntsevskaya metro station"/>
       </a>
