Temple Of Aphrodite

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 
 	 
        <div class="titles col2">
-      <a href="sophia.html">
+             <a href="aphrodite_temple.html">
         <div class="name_block">
-          <span style="color: #f5002d">Sophia</span>
+          <span style="color: #000000">Temple Of Aphrodite</span>
         </div>
-        <img loading="lazy" src="images/preview/sophia.jpg" class="tiles" alt="Sophia"/>
+        <img loading="lazy" src="images/preview/aphrodite_temple.jpg" class="tiles" alt="Marani"/>
       </a>
     </div>
 	 
@@ -141,7 +141,23 @@
       </a>
     </div>
    
-	 
+	     <div class="titles">
+      <a href="stpf.html">
+        <div class="name_block">
+          <span style="color: #A5D610">Cannabis bank</span>
+        </div>
+        <img loading="lazy" src="images/preview/stpf.jpg" class="tiles" alt="Cannabis bank"/>
+      </a>
+    </div>
+
+<div class="titles col2">
+		       <a href="sophia.html">
+        <div class="name_block">
+          <span style="color: #f5002d">Sophia</span>
+        </div>
+        <img loading="lazy" src="images/preview/sophia.jpg" class="tiles" alt="Sophia"/>
+      </a>
+	</div>
 
   <div class="titles">
       <a href="renovation.html">
@@ -158,33 +174,6 @@
       </a>
     </div>
 
-  
-
-    <div class="titles">
-      <a href="stpf.html">
-        <div class="name_block">
-          <span style="color: #A5D610">Cannabis bank</span>
-        </div>
-        <img loading="lazy" src="images/preview/stpf.jpg" class="tiles" alt="Cannabis bank"/>
-      </a>
-    </div>
-
-<div class="titles col2">
-		 
-	 <div class="titles_sq">
-      <a href="neon_suit.html">
-        <div class="name_block">NeonSuit</div>
-        <img loading="lazy" src="images/preview/neon_suit.jpg" width="215" height="200" class="tiles" alt="NeonSuit"/>
-      </a>
-    </div>
-
-    <div class="titles_sq_2">
-      <a href="khech_art.html">
-        <div class="name_block">Art</div>
-        <img loading="lazy" src="images/preview/khech_art.jpg" width="215" height="200" class="tiles" alt="Art"/>
-      </a>
-    </div>
-	</div>
 
   <div class="titles">
       <a href="porto.html">
