--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="social">
 		
 		
-		<a href="https://socprofile.com/khech" target="_blank" rel="noopener">
+		<a href="contacts.html">
   <div class="contacts-link">Contacts</div>
     </a>
 		
