--- a/aphrodite_temple.html
+++ b/aphrodite_temple.html
@@ -64,11 +64,7 @@
         </a>
 
         <!-- [NAV_CLOSE] ссылка на главную -->
-        <a href="/">
-            <div class="cross_blank">
-                <img src="images/markup/cross.png" alt="" width="32" height="32" align="middle"/>
-            </div>
-        </a>
+     <a href="/" class="page-exit-link">Main</a>
 
     </div>
 
