--- a/jew_mon.html
+++ b/jew_mon.html
@@ -49,10 +49,7 @@ body,td,th {
     <img src="images/markup/arrow_R.png" alt="" width="32" height="32" align="middle"/>
     </div></a>
     
-    <a href="/"><div class="cross_blank">
-    <img src="images/markup/cross.png" alt="" width="32" height="32"  align="middle"/>
-    </div></a>
-    
+  <a href="/" class="page-exit-link">Main</a>    
 </div>
 
 <img class="img" src="images/content/jew_mon/Jew_mon_web.jpg" width="1200" alt=""/>
