--- a/Kuntsevskaya.html
+++ b/Kuntsevskaya.html
@@ -50,10 +50,7 @@ body,td,th {
     <img src="images/markup/arrow_R.png" alt="" width="32" height="32" align="middle"/>
     </div></a>
     
-    <a href="/"><div class="cross_blank">
-    <img src="images/markup/cross.png" alt="" width="32" height="32"  align="middle"/>
-    </div></a>
-	
+  <a href="/" class="page-exit-link">Main</a>	
 </div>
 
 
