--- a/archive.html
+++ b/archive.html
@@ -31,9 +31,7 @@
 <h1>Archive</h1>
 </div>
 
-<a href="/"><div class="cross_blank">
-<img src="images/markup/cross.png" alt="" width="32" height="32"  align="middle"/>
-</div></a>
+<a href="/" class="page-exit-link">Main</a>
 
 </div>
 
