--- a/contacts.html
+++ b/contacts.html
@@ -37,9 +37,7 @@
 <h1>Contacts</h1>
 </div>
 
-<a href="index.html"><div class="cross_blank">
-<img src="images/markup/cross.png" alt="" width="32" height="32" align="middle" />
-</div></a>
+<a href="/" class="page-exit-link">Main</a>
 
 </div>
 
