--- a/renovation.html
+++ b/renovation.html
@@ -57,10 +57,7 @@
     <img src="images/markup/arrow_R.png" alt="" width="32" height="32" align="middle"/>
     </div></a>
     
-    <a href="/"><div class="cross_blank">
-    <img src="images/markup/cross.png" alt="" width="32" height="32"  align="middle"/>
-    </div></a>
-    
+  <a href="/" class="page-exit-link">Main</a>    
 </div>
 
 <!--
