--- a/valdai.html
+++ b/valdai.html
@@ -46,10 +46,7 @@
     <img src="images/markup/arrow_R.png" alt="" width="32" height="32" align="middle"/>
     </div></a>
     
-    <a href="/"><div class="cross_blank">
-    <img src="images/markup/cross.png" alt="" width="32" height="32"  align="middle"/>
-    </div></a>
-    
+  <a href="/" class="page-exit-link">Main</a>    
 </div>
 
 <img class="img" src="images/content/valdai/1.jpg" width="1200" alt=""/>
