--- a/404.html
+++ b/404.html
@@ -97,10 +97,10 @@
             </div>
 
             <p class="error-text">
-                The page you are looking for doesn’t exist or has been moved.
+               
             </p>
 
-            <a href="/" class="error-link">Back to main page</a>
+            <a href="/" class="error-title">Back to main page</a>
         </div>
     </div>
 
